@@ -1,15 +1,16 @@
 package com.epam.mappers;
 
-import com.epam.dto.TraineeJsonDto;
-import com.epam.dto.TrainerJsonDto;
-import com.epam.dto.TrainingJsonDto;
-import com.epam.dto.UserJsonDto;
+import com.epam.dto.json.TraineeJsonDto;
+import com.epam.dto.json.TrainerJsonDto;
+import com.epam.dto.json.TrainingJsonDto;
+import com.epam.dto.json.UserJsonDto;
 import com.epam.model.Trainee;
 import com.epam.model.Trainer;
 import com.epam.model.Training;
 import com.epam.model.User;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class Mappers {
     public static Trainee convertTraineeJsonDtoToTrainee(TraineeJsonDto traineeJsonDto) {
@@ -30,7 +31,7 @@ public class Mappers {
                     training.setTrainer(trainer);
                     return training;
                 })
-                .toList();
+                .collect(Collectors.toList());
         trainer.setTrainings(trainings);
 
         User user = convertUserJsonDtoToUser(trainerJsonDto.getUser());
@@ -40,8 +41,8 @@ public class Mappers {
 
     public static User convertUserJsonDtoToUser(UserJsonDto userJsonDto) {
         User user = new User();
-        user.setFirstName(userJsonDto.getFirstName());
-        user.setLastName(userJsonDto.getLastName());
+        user.setFirstname(userJsonDto.getFirstName());
+        user.setLastname(userJsonDto.getLastName());
         user.setUsername(userJsonDto.getUsername());
         user.setPassword(userJsonDto.getPassword());
         user.setActive(userJsonDto.isActive());
